Refactor: Add the .ttf file to the folder Refactor: Clean up the code

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: kazooba;
-    src: url(https://rawgit.com/TheOmegaBlack/FreeCodeCampStuff/master/JavascriptCalculator/arcadeclassic.regular.ttf)
+    src: url(./arcadeclassic.regular.ttf)
 }
 
 * {
