--- a/src/main.css
+++ b/src/main.css
@@ -1,151 +1,138 @@
 @font-face {
-    font-family: kazooba;
-    src: url(./arcadeclassic.regular.ttf)
+  font-family: kazooba;
+  src: url(./arcadeclassic.regular.ttf);
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-body
-{
-    background-color: #101010;
-    background-color : RGBA(10, 10, 10, 0.9) !important;
+body {
+  background-color: #101010;
+  background-color: rgba(10, 10, 10, 0.9) !important;
 }
 
-.calculator-ext
-{
-    height : 430px;
-    width : 310px;
-    background-color : RGBA(255, 255, 255, 0.90);
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    border : 3px solid;
-    border-radius: 10px;
-    border-color : gray;
-    box-shadow: 0 0 20px white;
+.calculator-ext {
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 3px solid;
+  border-color: gray;
+  border-radius: 10px;
+  box-shadow: 0 0 20px white;
+  height: 430px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  width: 310px;
 }
 
-.calculator-top-div
-{
-    font-family : kazooba;
-    text-align : center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
+.calculator-top-div {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-family: kazooba, monospace;
+  height: 30px;
+  justify-content: center;
+  text-align: center;
 }
 
-
-.calculator-int
-{
-    height : 380px;
-    width : 280px;
-    background-color : #FF4136;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-    margin-top: auto;
-    border-color : gray;
-    border : 1px solid;
-    overflow: auto;
+.calculator-int {
+  background-color: #ff4136;
+  border: 1px solid;
+  border-color: gray;
+  border-radius: 10px;
+  height: 380px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  overflow: auto;
+  width: 280px;
 }
 
-.text-box
-{
-    margin-left: auto;
-    margin-right : auto;
-    margin-top: 20px;
-    background-color : #cce6ff;
-    height : 60px;
-    width: 240px;
-    border-color : black;
-    border: 2px solid;
-    border-radius : 5px;
-    line-height: 1;
+.text-box {
+  background-color: #cce6ff;
+  border: 2px solid;
+  border-color: black;
+  border-radius: 5px;
+  height: 60px;
+  line-height: 1;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  width: 240px;
 }
 
-.display-up
-{
-    height : 35px;
-    width: 236px;
-    border: 0 hidden;
-    background-color : #cce6ff;
-    margin-left: auto;
-    margin-right : auto;
-    border-radius : 10px;
-    font-family: kazooba;
-    text-align: right;
-    font-size: 40px;
-    padding-top: 5px;
+.display-up {
+  background-color: #cce6ff;
+  border: 0 hidden;
+  border-radius: 10px;
+  font-family: kazooba, monospace;
+  font-size: 40px;
+  height: 35px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+  text-align: right;
+  width: 236px;
 }
 
-.display-down
-{
-    height : 16px;
-    width: 236px;
-    border: 0 hidden;
-    background-color : #cce6ff;
-    margin-left: auto;
-    margin-right : auto;
-    border-radius : 0 0 10px 10px;
-    font-family: kazooba;
-    font-size: 20px;
-    text-align: right;
-    padding-top: 3px;
+.display-down {
+  background-color: #cce6ff;
+  border: 0 hidden;
+  border-radius: 0 0 10px 10px;
+  font-family: kazooba, monospace;
+  font-size: 20px;
+  height: 21px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-x: scroll;
+  padding-top: 3px;
+  text-align: right;
+  width: 236px;
 }
 
-.button-box
-{
-    margin-left: auto;
-    margin-right : auto;
-    margin-top: 10px;
-    background-color : #FFF;
-    height : 270px;
-    width: 240px;
-    border-color : black;
-    border: 2px solid;
-    border-radius : 5px;
+.button-box {
+  background-color: #fff;
+  border: 2px solid;
+  border-color: black;
+  border-radius: 5px;
+  height: 270px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  width: 240px;
 }
 
-.number-btn
-{
-    background-color: #AAA;
-    margin-top:  7px;
-    margin-left : 7px;
-    height: 50px;
-    width: 50px;
-    border-radius: 5px;
-    border: 0 solid black;
-    box-shadow: 0 3px #999;
+.number-btn {
+  background-color: #aaa;
+  border: 0 solid black;
+  border-radius: 5px;
+  box-shadow: 0 3px #999;
+  height: 50px;
+  margin-left: 7px;
+  margin-top: 7px;
+  width: 50px;
 }
 
-.number-btn:hover
-{
-    background-color: #BBB;
+.number-btn:hover {
+  background-color: #bbb;
 }
 
-button:focus
-{
-    outline: none !important;
+button:focus {
+  outline: none !important;
 }
 
-.clear-btn
-{
-    margin-top:  5px;
-    margin-left : 6px;
-    height: 25px;
-    width: 109px;
-    font-weight: bold;
-    background-color: #F87217;
-    border-radius: 5px;
-    border: 0 solid;
-    box-shadow: 0 3px #999;
+.clear-btn {
+  background-color: #f87217;
+  border: 0 solid;
+  border-radius: 5px;
+  box-shadow: 0 3px #999;
+  font-weight: bold;
+  height: 25px;
+  margin-left: 6px;
+  margin-top: 5px;
+  width: 109px;
 }
 
-.clear-btn:hover
-{
-    background-color: #E67010;
+.clear-btn:hover {
+  background-color: #e67010;
 }
